add edit user page

--- a/views/login.erb
+++ b/views/login.erb
@@ -2,6 +2,6 @@
   Username
   <input type="text" name="user[username]"><br>
   Password
-  <input type="text" name="user[password]"><br>
+  <input type="password" name="user[password]"><br>
   <input type="submit">
 </form>
