--- a/views/edituser.erb
+++ b/views/edituser.erb
@@ -7,7 +7,7 @@
   <input
   type="text"
   name="user[username]"
-  value="<%= @user.username %>">
+  value="<%= @user.username %>" autofocus>
   <br><br>
 
   <label><b>Password:</b></label><br>
