--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,6 +1,6 @@
 <form action="/signup" method="post">
   Username
-  <input type="text" name="user[username]"><br>
+  <input type="text" name="user[username]" autofocus><br>
   Password
   <input type="text" name="user[password]"><br>
   <input type="submit">
