--- a/views/login.erb
+++ b/views/login.erb
@@ -1,6 +1,6 @@
 <form action="/login" method="post">
   Username
-  <input type="text" name="user[username]"><br>
+  <input type="text" name="user[username]" autofocus><br>
   Password
   <input type="password" name="user[password]"><br>
   <input type="submit">
