--- a/views/users/edit.erb
+++ b/views/users/edit.erb
@@ -17,6 +17,13 @@
   value="<%= @user.password %>">
   <br><br>
 
+  <label><b>Bio:</b></label><br>
+  <input
+  type="text"
+  name="user[bio]"
+  value="<%= @user.bio %>">
+  <br><br>
+
   <label><b>Email:</b></label><br>
   <input
   type="text"
