add email input

--- a/views/users/signup.erb
+++ b/views/users/signup.erb
@@ -1,7 +1,9 @@
 <form action="/signup" method="post">
+  Email
+  <input type="text" name="user[email]" autofocus><br><br>
   Username
-  <input type="text" name="user[username]" autofocus><br>
+  <input type="text" name="user[username]"><br><br>
   Password
-  <input type="text" name="user[password]"><br>
+  <input type="text" name="user[password]"><br><br>
   <input type="submit">
 </form>
