view last 10 posts

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 
   <h3> <%= post.title %>  </h3>
   <em> User: <%= post.username %> </em> <br>
-  <%= post.content[0, 20]%>... <br><br>
+  <%= post.content%> <br><br>
 
 
   <a href="/posts/<%= post.id %>">Read more</a>
