limit to 150 chars

--- a/views/posts/edit.erb
+++ b/views/posts/edit.erb
@@ -14,6 +14,7 @@
   <textarea name="post[content]"
   rows="16"
   cols="70"
+  maxlength="150"
   value="<%= @post.content %>">
   </textarea>
   <br><br>
