--- a/views/posts/new.erb
+++ b/views/posts/new.erb
@@ -7,7 +7,7 @@
   <br><br>
 
   <label><b>Content:</b></label><br>
-  <textarea name="post[content]" rows="16" cols="70"></textarea>
+  <textarea name="post[content]" rows="16" cols="70" maxlength="150"></textarea>
   <br><br>
 
   <label><b>Username:</b></label><br>
