--- a/views/posts/edit.erb
+++ b/views/posts/edit.erb
@@ -19,7 +19,7 @@
   </textarea>
   <br><br>
 
-  <label><b>Author:</b></label><br>
+  <label><b>Username:</b></label><br>
   <input
   type="text"
   name="post[username]"
