--- a/views/index.erb
+++ b/views/index.erb
@@ -2,14 +2,11 @@
 <% if current_user %>
 <% @posts.each do |post| %>
 
-  <h3> <%= post.title %>  </h3>
-  <em> User: <%= post.username %> </em> <br>
-  <%= post.content%> <br><br>
-
-
-  <a href="/posts/<%= post.id %>">Read more</a>
-
-
+  <h3> <%= post.title %> </h3>
+  <em> User: <%= post.username %> </em> 
+  <br>
+  <p><%= post.content%></p>
+  <br>
   <br>
 <% end %>
 <% else %>
