--- a/views/posts/show.erb
+++ b/views/posts/show.erb
@@ -2,8 +2,10 @@
 
 
 <h3> <%= @post.title %> </h3>
-<em> Author: <%= @post.username %> </em> <br>
-<%= @post.content %> <br>
+<br>
+<h4> <%= @post.username %> </h4> 
+<br>
+<p> <%= @post.content %> </p> <br>
 
 <br>
 <p><a href="/posts/<%= @post.id %>/edit">Edit Post</a></p>
