--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,8 @@
 <% @posts.each do |post| %>
 
   <h3> <%= post.title %> </h3>
-  <em> User: <%= post.username %> </em> 
+  <br>
+	<h4> User: <a href="/users/<%= post.user.id %>"> <%= post.user.username %> </a> </h4>
   <br>
   <p><%= post.content%></p>
   <br>
