--- a/views/users/show.erb
+++ b/views/users/show.erb
@@ -3,6 +3,16 @@
 <p><%= @user.bio %></p>
 <br>
 <h2> <%= @user.email %> </h2> <br>
+<% @posts.each do |post| %>
+
+  <h3> <%= post.title %> </h3>
+  <br>
+	<h4> User: <a href="/users/<%= post.user.id %>"> <%= post.user.username %> </a> </h4>
+  <br>
+  <p><%= post.content%></p>
+  <br>
+  <br>
+<% end %>
 <% if current_user %>
 <p><a href="/users/<%= @user.id %>/edit">Edit Profile</a></p>
 <% end %>
