--- a/views/users/edit.erb
+++ b/views/users/edit.erb
@@ -18,10 +18,11 @@
   <br><br>
 
   <label><b>Bio:</b></label><br>
-  <input
+  <textarea
   type="text"
   name="user[bio]"
   value="<%= @user.bio %>">
+  </textarea>
   <br><br>
 
   <label><b>Email:</b></label><br>
