--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,18 @@
-<h1>This blog is a blog!</h1>
-<% if current_user %>
-<% @posts.each do |post| %>
-
-  <h3> <%= post.title %> </h3>
-  <br>
-	<h4> User: <a href="/users/<%= post.user.id %>"> <%= post.user.username %> </a> </h4>
-  <br>
-  <p><%= post.content%></p>
-  <br>
-  <br>
-<% end %>
-<% else %>
-	<h1>You are not logged in</h1>
-<% end %>
+<div class="front-page">
+	<h1>This blog is a blog!</h1>
+	<div class="front-page-post-container">
+		<% if current_user %>
+		<% @posts.each do |post| %>
+			<div class="front-page-posts">
+				<h3> <%= post.title %> </h3>
+				<h3><a href="/users/<%= post.user.id %>"> <%= post.user.username %> </a> </h3>
+				<hr>
+				<p><%= post.content%></p>
+				<br>
+			</div>
+		<% end %>
+		<% else %>
+			<h1>You are not logged in</h1>
+		<% end %>
+	</div>
+</div>
