--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,40 @@
   <head>
     <meta charset="utf-8">
     <title>This blog is a blog!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
+  <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">BLURG</a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+           <li><a href="/">Home</a></li>
+            <% if current_user %>
+              <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
+              <li><a href="/posts/new">Add New Post</a></li>
+              <li><a href="/">View All Posts</a></li>
+              <li><a href="/logout">Logout</a></li>
+              <% else %>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/signup">Signup</a></li>
+              <% end %>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
   <div class="container">
     <div class="flash-message">
 
@@ -20,28 +51,12 @@
           <%= flash[:alert] %>
         </div>
       <% end %>
-
     </div>
-    <div class="nav-bar">
-      <span>
-      <a href="/">Home</a>
-
-      <% if current_user %>
-        <a href="/users/<%= current_user.id %>">My Profile</a>
-        <a href="/posts/new">Add New Post</a>
-        <a href="/">View All Posts</a>
-        <a href="/logout">Logout</a>
-
-      <% else %>
-        <a href="/login">Login</a>
-        <a href="/signup">Signup</a>
-      <% end %>
-      </span>
-    </div>
-
     <p>Logged in as: <%= current_user ? current_user.username : "no one :(" %></p>
     <%= yield %>
   </div>  
-    <script src="/js/master.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="/js/master.js"></script>
   </body>
 </html>
