--- a/views/users/login.erb
+++ b/views/users/login.erb
@@ -1,7 +1,31 @@
-<form action="/login" method="post">
+<!-- <form action="/login" method="post">
   Username
   <input type="text" name="user[username]" autofocus><br>
   Password
   <input type="password" name="user[password]"><br>
   <input type="submit">
-</form>
+</form> -->
+<div class="login">
+	<div class="container">
+	    <div class="row">
+	        <div class="col-md-12">
+	            <h1 class="text-center login-title">Sign in to continue.</h1>
+	            <div class="account-wall">
+	                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+	                    alt="">
+	                <form class="form-signin" action="/login" method="post">
+	                <input type="text" class="form-control" name="user[username]" placeholder="Email" required autofocus>
+	                <input type="password" class="form-control" name= "user[password]" placeholder="Password" required>
+	                <button class="btn btn-lg btn-primary btn-block" type="submit">
+	                    Sign in</button>
+	                <label class="checkbox pull-left">
+	                    <input type="checkbox" value="remember-me">
+	                    Remember me
+	                </label>
+	                <a href="/login" class="pull-right">Create an account </a></span>
+	                </form>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+</div>
