--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-  <div class="container">
+  <div class="container-main">
     <div class="flash-message">
 
       <% if flash[:notice] %>
