--- a/views/users/login.erb
+++ b/views/users/login.erb
@@ -9,12 +9,12 @@
 	<div class="container">
 	    <div class="row">
 	        <div class="col-md-12">
-	            <h1 class="text-center login-title">Sign in to continue.</h1>
+	            <h3 class="text-center login-title">Sign in to your account.</h3>
 	            <div class="account-wall">
 	                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
 	                    alt="">
 	                <form class="form-signin" action="/login" method="post">
-	                <input type="text" class="form-control" name="user[username]" placeholder="Email" required autofocus>
+	                <input type="text" class="form-control" name="user[username]" placeholder="Username" required autofocus>
 	                <input type="password" class="form-control" name= "user[password]" placeholder="Password" required>
 	                <button class="btn btn-lg btn-primary btn-block" type="submit">
 	                    Sign in</button>
