--- a/views/users/signup.erb
+++ b/views/users/signup.erb
@@ -1,9 +1,25 @@
-<form action="/signup" method="post">
-  Email
-  <input type="text" name="user[email]" autofocus><br><br>
-  Username
-  <input type="text" name="user[username]"><br><br>
-  Password
-  <input type="text" name="user[password]"><br><br>
-  <input type="submit">
-</form>
+<div class="login">
+	<div class="container">
+	    <div class="row">
+	        <div class="col-md-12">
+	            <h3 class="text-center login-title">Create an account.</h3>
+	            <div class="account-wall">
+	                
+	                <form class="form-signin" action="/signup" method="post">
+	                <input type="text" class="form-control" name="user[email]" placeholder="Email" required autofocus>
+	                <input type="text" class="form-control" name="user[username]" placeholder="Username">
+	                <input type="password" class="form-control" name= "user[password]" placeholder="Password" required>
+	                <p>Password must be more than 5 characters long.</p>
+	                <button class="btn btn-lg btn-primary btn-block" type="submit">
+	                    Sign up</button>
+	                <label class="checkbox pull-left">
+	                    <input type="checkbox" value="remember-me">
+	                    Remember me
+	                </label>
+	                <a href="/login" class="pull-right">Create an account </a></span>
+	                </form>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+</div>
