add front page buttons

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -16,6 +16,14 @@ hr {
 	
 }
 
+.front-page button {
+	margin: 8px;
+}
+
+.front-page button a {
+	color: white;
+}
+
 .front-page-post-container {
 	text-align: center;
 }
