--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,8 @@
 			</div>
 		<% end %>
 		<% else %>
-			<h1>You are not logged in</h1>
+			<button class="btn btn-lg btn-primary"><a href="/login">Login</a></button>
+			<button class="btn btn-lg btn-primary"><a href="/signup">Sign up</a></button>
 		<% end %>
 	</div>
 </div>
