--- a/views/index.erb
+++ b/views/index.erb
@@ -12,8 +12,8 @@
 			</div>
 		<% end %>
 		<% else %>
-			<button class="btn btn-lg btn-primary"><a href="/login">Login</a></button>
-			<button class="btn btn-lg btn-primary"><a href="/signup">Sign up</a></button>
+			<a href="/login"><button class="btn btn-lg btn-primary">Login</button></a>
+			<a href="/signup"><button class="btn btn-lg btn-primary">Sign up</button></a>
 		<% end %>
 	</div>
 </div>
