--- a/public/css/master.css
+++ b/public/css/master.css
@@ -76,6 +76,7 @@ hr {
 .login {
 	width: 100%;
 	margin: 0 auto;
+	margin-top: 110px;
 }
 
 .container {
@@ -85,6 +86,10 @@ hr {
 
 .pull-right {
 	margin-top: 9px;
+}
+
+.container h3 {
+	margin-bottom: 15px;
 }
 
 .container input {
