--- a/views/users/show.erb
+++ b/views/users/show.erb
@@ -8,7 +8,7 @@
 				<h3>User: <%= @user.username %> </h3>
 				<p> About me: <%= @user.bio %></p>
 				<h3>E-mail: <%= @user.email %> </h3>
-				<% if current_user %>
+				<% if current_user.id == @user.id %>
 					<a href="/users/<%= @user.id %>/edit"><button class="btn btn-sm btn-primary">Edit Profile</button></a>
 				<% end %>
 			</div>
@@ -21,7 +21,7 @@
 				<h4><a href="/users/<%= post.user.id %>"> <%= post.user.username %> </a> </h4>
 			  <hr>
 			  <p><%= post.content%></p>
-			  <% if current_user %>
+			  <% if current_user.id == @user.id %>
 					<a href="/posts/<%= @post.id %>/edit"><button class="btn btn-sm btn-primary">Edit Post</button></a>
 				<% end %>
 			</div>
