--- a/views/posts/new.erb
+++ b/views/posts/new.erb
@@ -13,7 +13,7 @@
       <textarea name="post[content]" maxlength="150" class="post-content"></textarea>
       <br><br>
 
-      <input class="btn btn-lg btn-primary btn-post" type="submit" name="" value="Post">
+      <input class="btn btn-lg btn-primary btn-edit" type="submit" name="" value="Submit">
 
     </form>
   </div>
