fix spacing in content textarea

--- a/views/posts/edit.erb
+++ b/views/posts/edit.erb
@@ -15,12 +15,9 @@
 
       <label><b>Content:</b></label><br>
       <textarea name="post[content]"
-      rows="16"
-      cols="70"
       maxlength="150"
       value="<%= @post.content %>"
-      class="post-content">
-      </textarea>
+      class="post-content"></textarea>
       <br><br>
 
 
