--- a/views/users/login.erb
+++ b/views/users/login.erb
@@ -20,7 +20,7 @@
                     <input type="checkbox" value="remember-me">
                     Remember me
                 </label>
-                <a href="/login" class="pull-right">Create an account </a></span>
+                <a href="/signup" class="pull-right">Create an account </a></span>
                 </form>
 	            </div>
 	        </div>
