--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <div class="front-page">
-	<h1>This blog is a blog!</h1>
+	<h1>🐾 Le Petit Cat-a-blog 🐾</h1>
 	<div class="front-page-post-container">
 		<% if current_user %>
 		<% @posts.each do |post| %>
