--- a/views/users/edit.erb
+++ b/views/users/edit.erb
@@ -26,8 +26,7 @@
       type="text"
       name="user[bio]"
       class="post-title"
-      value="<%= @user.bio %>">
-      </textarea>
+      value="<%= @user.bio %>"></textarea>
       <br><br>
 
       <label><b>Email:</b></label><br>
