add scroll box on profile page

--- a/views/users/show.erb
+++ b/views/users/show.erb
@@ -13,7 +13,7 @@
 				<% end %>
 			</div>
 	</div>
-	<div class="col-md-6">
+	<div class="col-md-6 scroll">
 		<% @posts.each do |post| %>
 			<div class="profile-page-content">
 			  <h3> <%= post.title %> </h3>
