--- a/public/css/master.css
+++ b/public/css/master.css
@@ -79,7 +79,18 @@ body {
 	margin: 5px;
 }
 
+.scroll {
+	width: 500px;
+	height: 500px;
+	border: 3px solid rgba(51, 122, 183, 0.5);
+	border-radius: 8px;
+	overflow: scroll;
+	padding: 5px;
+	background-color: rgba(255, 255, 255, 0.8)
+}
+
 .profile-page-info {
+	height: 500px;
 	padding: 15px;
 	width: 100%;
 	border: 3px solid rgba(51, 122, 183, 0.5);
@@ -91,7 +102,6 @@ body {
 	text-align: center;
 	margin: 0 auto;
 	margin-bottom: 10px;
-	border: 3px solid rgba(51, 122, 183, 0.5);;
 	border-radius: 8px;
 	width: 400px;
 	padding: 15px;
